# monthly_planer

./: .gitignore  CHANGES.md  LICENSE  README.md  pyHtml.py  pyICalendar.py  pyKal.py  pykal.yaml  pyproject.toml  stylesheet.css
.github/workflows/: ci.yml
data/2019/: events.vcs
data/common/: stylesheet.css
src/2015/: Abfuhrkalender-Fünfstetten-2015.ics  Ferien_Bayern_2015.ics
src/2017/: Abfuhrkalender-Fünfstetten-2017.ics  Ferien_Bayern_2017.ics  gesetzliche_feiertage_bayern_2017.ics  gesetzliche_feiertage_deutschland_2017.ics
src/2018/: Abfuhrkalender-Fünfstetten-2018.ics  Ferien_Bayern_2018.ics
src/2019/: Abfuhrkalender-Fünfstetten-2019.ics  Feiertage_Bayern_2019.ics  Ferien_Bayern_2019.ics  my_events.csv
src/2020/: Abfuhrkalender-Fünfstetten-2020.ics  feiertage_bayern_2020.ics  ferien_bayern_2020.ics  my_events.csv
src/2021/: Abfuhrkalender-Fünfstetten-2021.ics  feiertage_bayern_2021.ics  ferien_bayern_2021.ics
src/2022/: Abfuhrkalender-Fünfstetten-2022.ics  feiertage_bayern_2022.ics  ferien_bayern_2022.ics  my_events.csv
src/common/: Geburtstage.csv  Geburtstage.ics  Namenstage.csv  convert_nt.ps1  myGeburtstage.csv  my_events.csv  namenstage.txt
src/pykal/: cal.py  cli.py  generate.py  html.py  icalendar.py
src/pykal/templates/: calendar_month.html
src/pykal/web/: app.py  routes.py
src/pykal/web/static/: web.css
src/pykal/web/templates/: base.html  birthday_edit.html  birthdays.html  dashboard.html  events.html  settings.html
tests/: test_cal.py  test_icalendar.py
